
[project]
name = "termgraph"
version = "0.6.0"
description = "A command-line tool that draws basic graphs in the terminal."
readme = "README.md"
license = "MIT"
authors = [
    {name = "mkaz", email = "marcus@mkaz.com"},
]
maintainers = [
    {name = "mkaz", email = "marcus@mkaz.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["python", "CLI", "tool", "drawing", "graphs", "shell", "terminal", "visualization"]
requires-python = ">=3.9"
dependencies = [
    "colorama>=0.4.6",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.1.0",
    "build>=1.3.0",
    "twine>=6.1.0",
    "mypy>=1.17.1",
    "types-colorama>=0.4.15.20250801",
]

[project.urls]
Homepage = "https://github.com/mkaz/termgraph"
Repository = "https://github.com/mkaz/termgraph"
Issues = "https://github.com/mkaz/termgraph/issues"
Changelog = "https://github.com/mkaz/termgraph/releases"

[project.scripts]
termgraph = "termgraph.termgraph:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ruff configuration
[tool.ruff]
target-version = "py39"

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.4"
addopts = [
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

